--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,3 @@
-/* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
   "compileOnSave": false,
   "compilerOptions": {
@@ -16,17 +15,31 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es2020",
+    "target": "es2017",
     "module": "es2020",
     "lib": [
       "es2020",
       "dom"
-    ]
+    ],
+    "skipLibCheck": true //To avoid Typedoc checking node_modules
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true
-  }
+  },
+  "typedocOptions": {
+    "entryPoints": ["src/app/fetch-api-data.service.ts",
+                    "src/app/director/director.component.ts", 
+                    "src/app/edit-profile/edit-profile.component.ts",
+                    "src/app/genre/genre.component.ts", 
+                    "src/app/movie-card/movie-card.component.ts",
+                    "src/app/profile/profile.component.ts", 
+                    "src/app/navbar/navbar.component.ts", 
+                    "src/app/user-login-form/user-login-form.component.ts",
+                    "src/app/user-registration-form/user-registration-form.component.ts", 
+                    "src/app/welcome-page/welcome-page.component.ts"],
+    "out": "docs"
+}
 }
